# url-shortner-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 118fc6986165_fixed_the_update_at.py  2c796a47ad25_added_the_user_model.py  3bd26dd595bb_added_the_is_active_to_the_session.py  7d60542d3b97_fixed_rthe_created_at.py  8dec8f696bb7_fixed_rthe_created_at.py  91feac5a0705_made_refresh_token_nullable.py  a29ae70aaeb9_added_the_user_session_model.py  d33af4bfb23d_.py  e6eac4669ba1_fixed_rthe_created_at.py  f9ef2f99a0d1_added_the_urls_models.py
src/configs/: db_registry.py  pg.py  redis.py  resend.py  root_model.py  settings.py
src/dependencies/: pg.py
src/modules/analytics/admin/: routes.py  services.py
src/modules/analytics/users/: models.py  payloads.py  routes.py  services.py
src/modules/auth/: enums.py  helpers.py  models.py  routes.py  schemas.py  services.py
src/modules/auth/admin/: routes.py  schemas.py  services.py
src/modules/auth/user/: models.py  routes.py  services.py
src/modules/urls/user/: helpers.py  models.py  payloads.py  routes.py  schemas.py  services.py
src/routes/: admin.py  user.py
src/scripts/: init.py
src/templates/: otp.py
src/utils/: auth.py  cache.py  email.py  generators.py
