[project]
name = "url-shortner-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi[standard]>=0.136.3",
    "passlib<4.0.0",
    "pre-commit>=4.6.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "redis>=8.0.0",
    "resend>=2.30.1",
    "ruff>=0.15.17",
    "sqlalchemy>=2.0.50",
    "ty>=0.0.49",
    "uuid6>=2025.0.1",
]

[tool.ruff]
exclude = ["venv", "src/configs/db_registry.py", "alembic/versions/*.py"]
